--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;600&family=Jost:wght@400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;600&family=Jost:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -9,5 +10,20 @@
 @layer utilities {
     .w-1210 {
         width: 1210px;
+    }
+}
+body::-webkit-scrollbar {
+    display: none;
+}
+html {
+    scrollbar-width: none;
+}
+.clip {
+    @media screen and (max-width: 1280px) {
+        
+        clip-path: polygon(0 25%, 100% 25%, 100% 100%, 0% 100%);
+    }
+    @media screen  and (min-width:1280px){
+        clip-path: none!important;
     }
 }
