--- a/views/about.html
+++ b/views/about.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -23,12 +23,14 @@
 
       <nav class="flex items-center gap-3 xl:gap-12">
         <ul class="hidden xl:mr-5 xl:flex xl:gap-12">
-          <li class="font-Jost text-xl font-medium"><a href="#">Home</a></li>
+          <li class="font-Jost text-xl font-medium">
+            <a href="/index.html">Home</a>
+          </li>
           <li class="font-Jost text-xl font-medium">
             <a href="/views/about.html">Pages</a>
           </li>
           <li class="font-Jost text-xl font-medium">
-            <a href="#">Services</a>
+            <a href="/test.html">Services</a>
           </li>
           <li class="font-Jost text-xl font-medium"><a href="#">Project</a></li>
           <li class="font-Jost text-xl font-medium"><a href="#">Blog</a></li>
@@ -83,83 +85,97 @@
         <div class="mx-2 h-24 border-l border-black-light sm:mx-2"></div>
       </div>
 
-      <!-- what we do -->
-      <div
-        class="relative mt-0 h-[300px] flex-row-reverse justify-center xl:mx-auto xl:mt-40 xl:flex xl:w-[1280px]"
-      >
-        <img
-          src="../assets/images/backgrounds/Rectangle 18.png"
-          alt="image"
-          class="clip relative mx-auto w-11/12 xl:mx-0 xl:h-[500px] xl:w-[700px]"
-        />
-        <div class="xl:mr-8 xl:mt-10 xl:w-[500px]">
-          <div
-            class="absolute left-1/2 size-[200px] -translate-x-1/2 -translate-y-1/2 rounded-full bg-white sm:mt-4 sm:size-[380px] sm:-translate-y-1/3 md:mt-2 md:size-[460px] xl:static xl:ml-12 xl:h-0 xl:translate-x-0 xl:translate-y-0"
-          >
-            <h1
-              class="mt-12 text-center font-DM-serif-Display text-3xl text-black-dark sm:text-3xlp md:mt-20 md:text-5xl xl:text-start"
-            >
-              What We Do
-            </h1>
-          </div>
-          <p
-            class="md:xlp relative z-10 mx-auto mt-6 w-[300px] text-center font-Jost text-lg text-black-light sm:w-[400px] sm:text-xl xl:ml-12 xl:mt-16 xl:w-[445px] xl:text-start xl:text-xlp"
-          >
-            Transforming your house into a dream home, we specialize in crafting
-            personalized interiors tailored to your unique style and
-            preferences.
-          </p>
-
-          <button
-            class="relative z-10 mx-auto mt-6 flex items-center rounded-2xl bg-black-dark px-8 py-4 font-Inter text-lg font-semibold text-white xl:ml-12 xl:mt-10 xl:px-10 xl:py-6"
-          >
-            Get Started
+      <section class="mt-14 sm:mt-20 md:mt-24 xl:mt-32">
+        <!-- what we do -->
+        <div
+          class="relative mt-0 h-[300px] flex-row-reverse justify-center xl:mx-auto xl:mt-40 xl:flex xl:w-[1280px]"
+        >
+          <div>
             <img
-              src="../assets/images/icons/arrow.png"
+              src="../assets/images/backgrounds/Rectangle 18.png"
               alt="image"
-              class="grayscale-100 ml-3 brightness-0 invert filter"
+              class="relative mx-auto hidden w-11/12 xl:mx-0 xl:block xl:h-[500px] xl:w-[700px]"
             />
-          </button>
-        </div>
-      </div>
-
-      <!-- our result -->
-      <div
-        class="relative mt-44 h-[300px] flex-row justify-center xl:mx-auto xl:mt-40 xl:flex xl:w-[1280px] sm:mt-72 xsm:mt-32 md:mt-96 "
-      >
-        <img
-          src="../assets/images/backgrounds/Rectangle 19.png"
-          alt="image"
-          class="clip relative mx-auto w-11/12 xl:mx-0 xl:h-[500px] xl:w-[700px]"
-        />
-        <div class="xl:mr-8 xl:mt-10 xl:w-[500px]">
-          <div
-            class="absolute left-1/2 size-[200px] -translate-x-1/2 -translate-y-1/2 rounded-full bg-white sm:mt-4 sm:size-[380px] sm:-translate-y-1/3 md:mt-2 md:size-[460px] xl:static xl:ml-12 xl:h-0 xl:translate-x-0 xl:translate-y-0"
-          >
-            <h1
-              class="mt-12 text-center font-DM-serif-Display text-3xl text-black-dark sm:text-3xlp md:mt-20 md:text-5xl xl:text-start"
-            >
-              Outcomes
-            </h1>
           </div>
-          <p
-            class="md:xlp relative z-10 mx-auto mt-6 w-[300px] text-center font-Jost text-lg text-black-light sm:w-[400px] sm:text-xl xl:ml-12 xl:mt-16 xl:w-[445px] xl:text-start xl:text-xlp"
-          >
-            Our awards showcase our commitment to exceptional craftsmanship. Experience award-winning interiors that transform houses into homes
-          </p>
+          <div class="xl:mr-8 xl:mt-10 xl:w-[500px]">
+            <div
+              class="mt-50 relative left-1/2 flex h-[260px] w-11/12 -translate-x-1/2 flex-col items-center justify-end bg-bottom bg-no-repeat text-black-dark before:absolute before:bottom-0 before:left-1/2 before:z-10 before:h-[100px] before:w-[200px] before:-translate-x-1/2 before:rounded-tl-full before:rounded-tr-full before:bg-white sm:h-[320px] sm:before:h-[130px] sm:before:w-[260px] md:h-[360px] md:before:h-[160px] md:before:w-[320px] xl:mt-24 xl:h-0"
+              style="
+                background-image: url(/assets/images/backgrounds/Rectangle\ 18.png);
+              "
+            >
+              <h1
+                class="relative z-10 mt-12 text-center font-DM-serif-Display text-3xl text-black-dark sm:text-3xlp md:mt-20 md:text-5xl xl:mr-40 xl:text-start"
+              >
+                What We Do
+              </h1>
+            </div>
+            <p
+              class="md:xlp relative z-10 mx-auto mt-6 w-[300px] text-center font-Jost text-lg text-black-light sm:w-[400px] sm:text-xl xl:ml-12 xl:w-[445px] xl:text-start xl:text-xlp"
+            >
+              Transforming your house into a dream home, we specialize in
+              crafting personalized interiors tailored to your unique style and
+              preferences.
+            </p>
 
-          <button
-            class="relative z-10 mx-auto mt-6 flex items-center rounded-2xl bg-black-dark px-8 py-4 font-Inter text-lg font-semibold text-white xl:ml-12 xl:mt-10 xl:px-10 xl:py-6"
-          >
-            Our Portfolio 
-            <img
-              src="../assets/images/icons/arrow.png"
-              alt="image"
-              class="grayscale-100 ml-3 brightness-0 invert filter"
-            />
-          </button>
+            <button
+              class="relative z-10 mx-auto mt-6 flex items-center rounded-2xl bg-black-dark px-8 py-4 font-Inter text-lg font-semibold text-white xl:ml-12 xl:mt-10 xl:px-10 xl:py-6"
+            >
+              Our Concept
+              <img
+                src="../assets/images/icons/arrow.png"
+                alt="image"
+                class="grayscale-100 ml-3 brightness-0 invert filter"
+              />
+            </button>
+          </div>
         </div>
-      </div>
+
+        <!-- why trust us -->
+        <div
+          class="relative mt-0 h-[300px] flex-row justify-center xl:mx-auto xl:mt-[380px] xl:flex xl:w-[1280px]"
+        >
+          <div>
+            <img
+              src="../assets/images/backgrounds/Rectangle 19.png"
+              alt="image"
+              class="relative mx-auto hidden w-11/12 xl:mx-0 xl:block xl:h-[500px] xl:w-[700px]"
+            />
+          </div>
+          <div class="xl:mr-8 xl:mt-10 xl:w-[500px]">
+            <div
+              class="relative left-1/2 mt-[236px] flex h-[260px] w-11/12 -translate-x-1/2 flex-col items-center justify-end bg-bottom bg-no-repeat text-black-dark before:absolute before:bottom-0 before:left-1/2 before:z-10 before:h-[100px] before:w-[200px] before:-translate-x-1/2 before:rounded-tl-full before:rounded-tr-full before:bg-white sm:mt-[272px] sm:h-[320px] sm:before:h-[130px] sm:before:w-[260px] md:mt-[348px] md:h-[360px] md:before:h-[160px] md:before:w-[320px] xl:mt-24 xl:h-0 xl:before:h-0"
+              style="
+                background-image: url(/assets/images/backgrounds/Rectangle\ 19.png);
+              "
+            >
+              <h1
+                class="relative z-10 mt-12 text-center font-DM-serif-Display text-3xl text-black-dark sm:text-3xlp md:mt-20 md:text-5xl xl:mr-40 xl:text-start"
+              >
+                Why trust Us
+              </h1>
+            </div>
+            <p
+              class="md:xlp relative z-10 mx-auto mt-6 w-[300px] text-center font-Jost text-lg text-black-light sm:w-[400px] sm:text-xl xl:ml-12 xl:w-[445px] xl:text-start xl:text-xlp"
+            >
+              Elevate your space with confidence. Our expert designers blend
+              creativity and functionality to ensure every detail reflects your
+              unique style.
+            </p>
+
+            <button
+              class="relative z-10 mx-auto mt-6 flex items-center rounded-2xl bg-black-dark px-8 py-4 font-Inter text-lg font-semibold text-white xl:ml-12 xl:mt-10 xl:px-10 xl:py-6"
+            >
+              Our Portfolio
+              <img
+                src="../assets/images/icons/arrow.png"
+                alt="image"
+                class="grayscale-100 ml-3 brightness-0 invert filter"
+              />
+            </button>
+          </div>
+        </div>
+      </section>
     </section>
   </body>
 </html>
