--- a/views/about.html
+++ b/views/about.html
@@ -84,7 +84,9 @@
         </div>
         <div class="mx-2 h-24 border-l border-black-light sm:mx-2"></div>
       </div>
-
+     </section>
+     
+     <!-- Know us more -->
       <section class="mt-14 sm:mt-20 md:mt-24 xl:mt-32">
         <!-- what we do -->
         <div
@@ -176,6 +178,6 @@
           </div>
         </div>
       </section>
-    </section>
+  
   </body>
 </html>
