feat: made testimonial section responsive and add slider
Implentation :
- Utilize sliderSupport.js for moving testimonial slides.
- Utilize margin of testimonial slides to adjust space between slides.

It is a request to not alter the margin of testimonial slides as it would make styling unpleasent.
Paste this testimonial section code to index.html

--- a/views/about.html
+++ b/views/about.html
@@ -51,7 +51,11 @@
       </nav>
     </header>
 
-    <!-- About Us image -->
+    <!--
+  ***************************
+  *        Testimonials      *
+  ***************************
+-->
     <section class="mt-6 sm:mt-10 md:mt-12 xl:mt-16">
       <div
         class="relative h-36 w-screen bg-About-Us-img bg-center sm:h-44 md:h-56 xl:h-64 2xl:h-[356px]"
@@ -84,100 +88,249 @@
         </div>
         <div class="mx-2 h-24 border-l border-black-light sm:mx-2"></div>
       </div>
-     </section>
-     
-     <!-- Know us more -->
-      <section class="mt-14 sm:mt-20 md:mt-24 xl:mt-32">
-        <!-- what we do -->
-        <div
-          class="relative mt-0 h-[300px] flex-row-reverse justify-center xl:mx-auto xl:mt-40 xl:flex xl:w-[1280px]"
-        >
-          <div>
-            <img
-              src="../assets/images/backgrounds/Rectangle 18.png"
-              alt="image"
-              class="relative mx-auto hidden w-11/12 xl:mx-0 xl:block xl:h-[500px] xl:w-[700px]"
-            />
-          </div>
-          <div class="xl:mr-8 xl:mt-10 xl:w-[500px]">
-            <div
-              class="mt-50 relative left-1/2 flex h-[260px] w-11/12 -translate-x-1/2 flex-col items-center justify-end bg-bottom bg-no-repeat text-black-dark before:absolute before:bottom-0 before:left-1/2 before:z-10 before:h-[100px] before:w-[200px] before:-translate-x-1/2 before:rounded-tl-full before:rounded-tr-full before:bg-white sm:h-[320px] sm:before:h-[130px] sm:before:w-[260px] md:h-[360px] md:before:h-[160px] md:before:w-[320px] xl:mt-24 xl:h-0"
-              style="
-                background-image: url(/assets/images/backgrounds/Rectangle\ 18.png);
-              "
-            >
-              <h1
-                class="relative z-10 mt-12 text-center font-DM-serif-Display text-3xl text-black-dark sm:text-3xlp md:mt-20 md:text-5xl xl:mr-40 xl:text-start"
-              >
-                What We Do
-              </h1>
-            </div>
-            <p
-              class="md:xlp relative z-10 mx-auto mt-6 w-[300px] text-center font-Jost text-lg text-black-light sm:w-[400px] sm:text-xl xl:ml-12 xl:w-[445px] xl:text-start xl:text-xlp"
-            >
-              Transforming your house into a dream home, we specialize in
-              crafting personalized interiors tailored to your unique style and
-              preferences.
-            </p>
+    </section>
 
-            <button
-              class="relative z-10 mx-auto mt-6 flex items-center rounded-2xl bg-black-dark px-8 py-4 font-Inter text-lg font-semibold text-white xl:ml-12 xl:mt-10 xl:px-10 xl:py-6"
+    <!--
+  ***************************
+  *        More About Us      *
+  ***************************
+-->
+    <section class="mb-[180px] mt-14 sm:mt-20 md:mt-24 xl:mt-32">
+      <!-- what we do -->
+      <div
+        class="relative mt-0 h-[300px] flex-row-reverse justify-center xl:mx-auto xl:mt-40 xl:flex xl:w-[1280px]"
+      >
+        <div>
+          <img
+            src="../assets/images/backgrounds/Rectangle 18.png"
+            alt="image"
+            class="relative mx-auto hidden w-11/12 xl:mx-0 xl:block xl:h-[500px] xl:w-[700px]"
+          />
+        </div>
+        <div class="xl:mr-8 xl:mt-10 xl:w-[500px]">
+          <div
+            class="mt-50 relative left-1/2 flex h-[260px] w-11/12 -translate-x-1/2 flex-col items-center justify-end bg-bottom bg-no-repeat text-black-dark before:absolute before:bottom-0 before:left-1/2 before:z-10 before:h-[100px] before:w-[200px] before:-translate-x-1/2 before:rounded-tl-full before:rounded-tr-full before:bg-white sm:h-[320px] sm:before:h-[130px] sm:before:w-[260px] md:h-[360px] md:before:h-[160px] md:before:w-[320px] xl:mt-24 xl:h-0"
+            style="
+              background-image: url(/assets/images/backgrounds/Rectangle\ 18.png);
+            "
+          >
+            <h1
+              class="relative z-10 mt-12 text-center font-DM-serif-Display text-3xl text-black-dark sm:text-3xlp md:mt-20 md:text-5xl xl:mr-40 xl:text-start"
             >
-              Our Concept
-              <img
-                src="../assets/images/icons/arrow.png"
-                alt="image"
-                class="grayscale-100 ml-3 brightness-0 invert filter"
-              />
-            </button>
+              What We Do
+            </h1>
+          </div>
+          <p
+            class="md:xlp mx-auto mt-6 w-[300px] text-center font-Jost text-lg text-black-light sm:w-[400px] sm:text-xl xl:ml-12 xl:w-[445px] xl:text-start xl:text-xlp"
+          >
+            Transforming your house into a dream home, we specialize in crafting
+            personalized interiors tailored to your unique style and
+            preferences.
+          </p>
+
+          <button
+            class="mx-auto mt-6 flex items-center rounded-2xl bg-black-dark px-8 py-4 font-Inter text-lg font-semibold text-white xl:ml-12 xl:mt-10 xl:px-10 xl:py-6"
+          >
+            Our Concept
+            <img
+              src="../assets/images/icons/arrow.png"
+              alt="image"
+              class="grayscale-100 ml-3 brightness-0 invert filter"
+            />
+          </button>
+        </div>
+      </div>
+
+      <!-- why trust us -->
+      <div
+        class="relative mt-0 h-[300px] flex-row justify-center xl:mx-auto xl:mt-[380px] xl:flex xl:w-[1280px]"
+      >
+        <div>
+          <img
+            src="../assets/images/backgrounds/Rectangle 19.png"
+            alt="image"
+            class="relative mx-auto hidden w-11/12 xl:mx-0 xl:block xl:h-[500px] xl:w-[700px]"
+          />
+        </div>
+        <div class="xl:mr-8 xl:mt-10 xl:w-[500px]">
+          <div
+            class="relative left-1/2 mt-[236px] flex h-[260px] w-11/12 -translate-x-1/2 flex-col items-center justify-end bg-bottom bg-no-repeat text-black-dark before:absolute before:bottom-0 before:left-1/2 before:z-10 before:h-[100px] before:w-[200px] before:-translate-x-1/2 before:rounded-tl-full before:rounded-tr-full before:bg-white sm:mt-[272px] sm:h-[320px] sm:before:h-[130px] sm:before:w-[260px] md:mt-[348px] md:h-[360px] md:before:h-[160px] md:before:w-[320px] xl:mt-24 xl:h-0 xl:before:h-0"
+            style="
+              background-image: url(/assets/images/backgrounds/Rectangle\ 19.png);
+            "
+          >
+            <h1
+              class="relative z-10 mt-12 text-center font-DM-serif-Display text-3xl text-black-dark sm:text-3xlp md:mt-20 md:text-5xl xl:mr-40 xl:text-start"
+            >
+              Why trust Us
+            </h1>
+          </div>
+          <p
+            class="md:xlp relative z-10 mx-auto mt-6 w-[300px] text-center font-Jost text-lg text-black-light sm:w-[400px] sm:text-xl xl:ml-12 xl:w-[445px] xl:text-start xl:text-xlp"
+          >
+            Elevate your space with confidence. Our expert designers blend
+            creativity and functionality to ensure every detail reflects your
+            unique style.
+          </p>
+
+          <button
+            class="relative z-10 mx-auto mt-6 flex items-center rounded-2xl bg-black-dark px-8 py-4 font-Inter text-lg font-semibold text-white xl:ml-12 xl:mt-10 xl:px-10 xl:py-6"
+          >
+            Our Portfolio
+            <img
+              src="../assets/images/icons/arrow.png"
+              alt="image"
+              class="grayscale-100 ml-3 brightness-0 invert filter"
+            />
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <!--
+  ***************************
+  *        Testimonials      *
+  ***************************
+-->
+
+    <section
+      class="mx-auto mt-60 grid w-screen place-content-center bg-orange-light pb-20 sm:mt-72 md:mt-96 xl:h-[679px] xl:w-[1210px] xl:rounded-[30px]"
+    >
+      <h1
+        class="mt-6 text-center font-DM-serif-Display text-3xl text-white sm:text-3xlp md:mt-16 md:text-5xl xl:mt-[80px] xsm:text-2xl"
+      >
+        What the People Thinks
+      </h1>
+      <h1
+        class="text-center font-DM-serif-Display text-3xl text-white sm:text-3xlp md:text-5xl xsm:text-2xl"
+      >
+        About Us
+      </h1>
+      <!-- to make slider  -->
+
+      <div class="slider-wrapper relative flex xl:ml-8">
+        <button
+          id="prev-slide"
+          class="slide-button absolute -left-4 top-1/2 z-10 flex -translate-y-1/2 cursor-pointer items-center justify-center border-none text-3xl text-white outline-none hover:opacity-50 sm:size-12 sm:rounded-full sm:text-5xl md:hidden xsm:text-2xlp"
+        >
+          <i class="fa-solid fa-chevron-left"></i>
+        </button>
+        <!-- container of containers  -->
+        <div
+          class="slider-list pointer-events-none mx-auto flex w-[280px] gap-[270px] overflow-auto sm:w-[340px] sm:gap-[330px] md:mt-8 md:block md:w-screen xl:flex xl:gap-5"
+        >
+          <!--  testimonail container1  -->
+          <div id="slide1" class="mt-4 flex justify-center gap-5">
+            <div
+              class="ml-[10px] h-[200px] w-[260px] rounded-[30px] bg-white px-4 pt-4 sm:h-[260px] sm:w-[320px] md:mr-96 md:h-[220px] xl:m-0 xl:h-[300px] xl:w-[370px] xl:pl-9"
+            >
+              <div class="flex items-center xl:mt-6">
+                <img
+                  src="/assets/images/icons/testimonial1.jpg"
+                  alt="testsimonial1"
+                  class="size-16 rounded-full sm:size-20"
+                />
+                <div class="ml-3">
+                  <h1
+                    class="font-DM-serif-Display text-xlp text-black-dark sm:text-2xlp"
+                  >
+                    Natasha
+                  </h1>
+                  <p class="-mt-1 font-Jost text-black-light sm:text-lg">
+                    Moscow,Russia
+                  </p>
+                </div>
+              </div>
+              <p class="mt-4 text-wrap text-black-light sm:text-xl xl:hidden">
+                Transformed my house into a dream home. Couldn't be happier with
+                results!
+              </p>
+              <p
+                class="hidden text-wrap text-black-light sm:text-xl xl:mt-6 xl:block"
+              >
+                Thanks to the incredible team at Interior Bliss, our home has
+                been transformed into a sanctuary of elegance and comfort.
+              </p>
+            </div>
+          </div>
+
+          <!--  testimonail container2  -->
+          <div id="slide2" class="mt-4 flex justify-center gap-5">
+            <div
+              class="mx-[20px] h-[200px] w-[260px] rounded-[30px] bg-white px-4 pt-4 sm:h-[260px] sm:w-[320px] md:ml-96 md:h-[220px] xl:m-0 xl:h-[300px] xl:w-[370px] xl:pl-9"
+            >
+              <div class="flex items-center xl:mt-6">
+                <img
+                  src="/assets/images/icons/testimonial2.png"
+                  alt="testsimonial2"
+                  class="size-16 rounded-full sm:size-20"
+                />
+                <div class="ml-3">
+                  <h1
+                    class="font-DM-serif-Display text-xlp text-black-dark sm:text-2xlp"
+                  >
+                    Raymond
+                  </h1>
+                  <p class="-mt-1 font-Jost text-black-light sm:text-lg">
+                    UK, London
+                  </p>
+                </div>
+              </div>
+              <p class="mt-4 text-wrap text-black-light sm:text-xl xl:hidden">
+                Transformed my house into a dream home. Couldn't be happier with
+                results!
+              </p>
+              <p
+                class="hidden text-wrap text-black-light sm:text-xl xl:mt-6 xl:block"
+              >
+                Thanks to the incredible team at Interior Bliss, our home has
+                been transformed into a sanctuary of elegance and comfort.
+              </p>
+            </div>
+          </div>
+          <!--  testimonail container3  -->
+          <div id="slide3" class="mt-4 flex justify-center gap-5">
+            <div
+              class="ml-[10px] h-[200px] w-[260px] rounded-[30px] bg-white px-4 pt-4 sm:h-[260px] sm:w-[320px] md:mr-96 md:h-[220px] xl:m-0 xl:h-[300px] xl:w-[370px] xl:pl-9"
+            >
+              <div class="flex items-center xl:mt-6">
+                <img
+                  src="/assets/images/icons/testimonial1.jpg"
+                  alt="testsimonial1"
+                  class="size-16 rounded-full sm:size-20"
+                />
+                <div class="ml-3">
+                  <h1
+                    class="font-DM-serif-Display text-xlp text-black-dark sm:text-2xlp"
+                  >
+                    Benny Roll
+                  </h1>
+                  <p class="-mt-1 font-Jost text-black-light sm:text-lg">
+                    USA, New York
+                  </p>
+                </div>
+              </div>
+              <p class="mt-4 text-wrap text-black-light sm:text-xl xl:hidden">
+                Transformed my house into a dream home. Couldn't be happier with
+                results!
+              </p>
+              <p
+                class="hidden text-wrap text-black-light sm:text-xl xl:mt-6 xl:block"
+              >
+                Thanks to the incredible team at Interior Bliss, our home has
+                been transformed into a sanctuary of elegance and comfort.
+              </p>
+            </div>
           </div>
         </div>
-
-        <!-- why trust us -->
-        <div
-          class="relative mt-0 h-[300px] flex-row justify-center xl:mx-auto xl:mt-[380px] xl:flex xl:w-[1280px]"
+        <button
+          id="next-slide"
+          class="slide-button absolute -right-4 top-1/2 z-10 flex -translate-y-1/2 cursor-pointer items-center justify-center border-none text-3xl text-white outline-none hover:opacity-50 sm:size-12 sm:rounded-full sm:text-5xl md:hidden xsm:text-2xlp"
         >
-          <div>
-            <img
-              src="../assets/images/backgrounds/Rectangle 19.png"
-              alt="image"
-              class="relative mx-auto hidden w-11/12 xl:mx-0 xl:block xl:h-[500px] xl:w-[700px]"
-            />
-          </div>
-          <div class="xl:mr-8 xl:mt-10 xl:w-[500px]">
-            <div
-              class="relative left-1/2 mt-[236px] flex h-[260px] w-11/12 -translate-x-1/2 flex-col items-center justify-end bg-bottom bg-no-repeat text-black-dark before:absolute before:bottom-0 before:left-1/2 before:z-10 before:h-[100px] before:w-[200px] before:-translate-x-1/2 before:rounded-tl-full before:rounded-tr-full before:bg-white sm:mt-[272px] sm:h-[320px] sm:before:h-[130px] sm:before:w-[260px] md:mt-[348px] md:h-[360px] md:before:h-[160px] md:before:w-[320px] xl:mt-24 xl:h-0 xl:before:h-0"
-              style="
-                background-image: url(/assets/images/backgrounds/Rectangle\ 19.png);
-              "
-            >
-              <h1
-                class="relative z-10 mt-12 text-center font-DM-serif-Display text-3xl text-black-dark sm:text-3xlp md:mt-20 md:text-5xl xl:mr-40 xl:text-start"
-              >
-                Why trust Us
-              </h1>
-            </div>
-            <p
-              class="md:xlp relative z-10 mx-auto mt-6 w-[300px] text-center font-Jost text-lg text-black-light sm:w-[400px] sm:text-xl xl:ml-12 xl:w-[445px] xl:text-start xl:text-xlp"
-            >
-              Elevate your space with confidence. Our expert designers blend
-              creativity and functionality to ensure every detail reflects your
-              unique style.
-            </p>
-
-            <button
-              class="relative z-10 mx-auto mt-6 flex items-center rounded-2xl bg-black-dark px-8 py-4 font-Inter text-lg font-semibold text-white xl:ml-12 xl:mt-10 xl:px-10 xl:py-6"
-            >
-              Our Portfolio
-              <img
-                src="../assets/images/icons/arrow.png"
-                alt="image"
-                class="grayscale-100 ml-3 brightness-0 invert filter" 
-              />
-            </button>
-          </div>
-        </div>
-      </section>
-  
+          <i class="fa-solid fa-chevron-right"></i>
+        </button>
+      </div>
+    </section>
+    <script src="/views/sliderSupport.js"></script>
   </body>
 </html>
