fix: Prevent content overflow in slider-wrapper at xl breakpoint
Resolve bug causing content overflow by applying overflow-hidden at xl.

--- a/views/about.html
+++ b/views/about.html
@@ -208,7 +208,7 @@
       </h1>
       <!-- to make slider  -->
 
-      <div class="slider-wrapper relative flex xl:ml-8">
+      <div id = "slider-wrapper" class="slider-wrapper relative flex xl:ml-8 xl:overflow-hidden">
         <button
           id="prev-slide"
           class="slide-button absolute -left-4 top-1/2 z-10 flex -translate-y-1/2 cursor-pointer items-center justify-center border-none text-3xl text-white outline-none hover:opacity-50 sm:size-12 sm:rounded-full sm:text-5xl md:hidden xsm:text-2xlp"
