feat:add footer in about page

--- a/views/about.html
+++ b/views/about.html
@@ -348,13 +348,15 @@
         Creative project? Let's have a productive talk.
       </h1>
 
-      <div class=" mx-auto mt-8 w-[300px]  sm:mx-auto   sm:w-[560px] md:w-[680px] md:mx-auto xl:ml-0 xl:mt-24">
+      <div
+        class="mx-auto mt-8 w-[300px] sm:mx-auto sm:w-[560px] md:mx-auto md:w-[680px] xl:ml-0 xl:mt-24"
+      >
         <div
           class="sm:flex sm:gap-32 md:gap-52 xl:w-[1210px] xl:justify-between xl:gap-80"
         >
-          <div class=" mt-4 border-b-2 sm:w-48  xl:pr-96">
+          <div class="mt-4 border-b-2 sm:w-48 xl:pr-96">
             <input
-              class="border-none font-Jost text-xl text-black-light outline-none sm:text-2xl xl:text-3xl "
+              class="border-none font-Jost text-xl text-black-light outline-none sm:text-2xl xl:text-3xl"
               placeholder="Name"
               type="text"
             />
@@ -369,14 +371,14 @@
         </div>
         <div class="mt-4 border-b-2 sm:w-[560px] xl:mt-40 xl:w-[1210px]">
           <input
-            class="border-none font-Jost text-xl text-black-light outline-none sm:text-2xl  xl:text-3xl"
+            class="border-none font-Jost text-xl text-black-light outline-none sm:text-2xl xl:text-3xl"
             placeholder="Message"
             type="text"
           />
         </div>
       </div>
       <button
-        class=" mx-auto mt-10 flex items-center rounded-2xl bg-black-dark px-8 py-4 font-Inter text-lg font-semibold text-white xl:px-10 xl:py-6"
+        class="mx-auto mt-10 flex items-center rounded-2xl bg-black-dark px-8 py-4 font-Inter text-lg font-semibold text-white xl:px-10 xl:py-6"
       >
         Send Now
         <img
@@ -386,6 +388,88 @@
         />
       </button>
     </section>
+    <!--
+  ***************************
+  *          Footer       *
+  ***************************
+-->
+    <footer class="mt-12 md:mt-20 xl:mt-60">
+      <div class="gap-24 xl:flex xl:mx-auto xl:w-[1210px] ">
+        <div class=" xl:ml-0 sm:w-[560px] mx-auto md:w-[680px] w-[300px]">
+          <div class="flex gap-1 ">
+            <img
+              src="/assets/images/logos/Vector.png"
+              alt="logo"
+              class="size-6 sm:size-8 md:size-12 xl:size-10 "
+            />
+            <h1 class="font-DM-serif-Display text-xlp text-black-light sm:text-2xlp md:text-4xl md:mt-3 xl:text-[40px] xl:mt-0 ml-2">
+              SELHONO
+            </h1>
+          </div>
+          <p
+            class="mt-2 w-[300px] sm:w-[560px] text-wrap text-left font-Jost text-xl text-black-light md:text-2xl md:w-[620px] md:mt-6 xl:w-[400px]"
+          >
+            Join our vibrant community of interior design enthusiasts! <br class=""> Follow us
+            on Facebook, Instagram, LinkedIn, and Twitter for daily inspiration
+          </p>
+
+          <div class="flex gap-4 sm:mt-4">
+            <div class="text-2xlp  text-black-dark sm:text-4xl">
+              <i class="fa-brands fa-square-facebook"></i>
+            </div>
+            <div class="text-2xlp text-black-dark sm:text-4xl">
+              <i class="fa-brands fa-square-x-twitter"></i>
+            </div>
+            <div class="text-2xlp text-black-dark sm:text-4xl">
+              <i class="fa-brands fa-linkedin"></i>
+            </div>
+            <div class="text-2xlp text-black-dark sm:text-4xl">
+              <i class="fa-brands fa-square-instagram"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="hidden text-nowrap xl:block">
+          <h1 class="font-DM-serif-Display text-2xl text-black-dark">Pages</h1>
+          <p class="text-xlp leading-[4rem] text-black-light">About Us</p>
+          <p class="text-xlp leading-[4rem] text-black-light">Our Projects</p>
+          <p class="text-xlp leading-[4rem] text-black-light">Our Team</p>
+          <p class="text-xlp leading-[4rem] text-black-light">Contact Us</p>
+          <p class="text-xlp leading-[4rem] text-black-light">Services</p>
+        </div>
+
+        <div class="hidden text-nowrap xl:block">
+          <h1 class="font-DM-serif-Display text-2xl text-black-dark">
+            Services
+          </h1>
+          <p class="text-xlp leading-[4rem] text-black-light">Kitchan</p>
+          <p class="text-xlp leading-[4rem] text-black-light">Living Area</p>
+          <p class="text-xlp leading-[4rem] text-black-light">Bathroom</p>
+          <p class="text-xlp leading-[4rem] text-black-light">Dinning Hall</p>
+          <p class="text-xlp leading-[4rem] text-black-light">Bedroom</p>
+        </div>
+
+        <div class=" mt-10   md:w-[680px] xl:m-0 sm:w-[560px] mx-auto w-[300px] ">
+          <h1 class="font-DM-serif-Display text-2xl text-black-dark md:text-3xl xl:text-2xl">
+            Contact
+          </h1>
+          <p
+            class="mt-[1rem] whitespace-normal text-xl text-black-light sm:text-xlp md:text-2xl xl:leading-8 xl:text-xlp"
+          >
+            55 East Birchwood Ave. <br class="sm:hidden" />
+            Brooklyn, New York 11201
+          </p>
+
+          <p class="text-xl text-black-light xl:text-xlp xl:leading-[4rem] md:text-2xl">
+            contact@selhono.com
+          </p>
+          <p class="text-xl sm:text-xlp leading-[4rem] text-black-light">
+            (123) 456 - 7890
+          </p>
+        </div>
+      </div>
+      <p class="mt-12 text-center font-Jost sm:mt-20 md:mt-24 xl:mt-40  text-black-light mb-8 sm:text-xlp">Copyright © SELHONO</p>
+    </footer>
     <script src="/views/sliderSupport.js"></script>
   </body>
 </html>
