fix(contact): fix layout at 768px breakpoint
Ensure proper alignment by adjusting padding to fix bottom border under each input field in the contact form at the 768px breakpoint.

--- a/views/about.html
+++ b/views/about.html
@@ -354,7 +354,7 @@
         <div
           class="sm:flex sm:gap-32 md:gap-52 xl:w-[1210px] xl:justify-between xl:gap-80"
         >
-          <div class="mt-4 border-b-2 sm:w-48 xl:pr-96">
+          <div class="mt-4 border-b-2 sm:w-48 xl:pr-96 md:pr-60">
             <input
               class="border-none font-Jost text-xl text-black-light outline-none sm:text-2xl xl:text-3xl"
               placeholder="Name"
@@ -369,7 +369,7 @@
             />
           </div>
         </div>
-        <div class="mt-4 border-b-2 sm:w-[560px] xl:mt-40 xl:w-[1210px]">
+        <div class="mt-4 border-b-2 sm:w-[560px] xl:mt-40 xl:w-[1210px] md:w-[680px]">
           <input
             class="border-none font-Jost text-xl text-black-light outline-none sm:text-2xl xl:text-3xl"
             placeholder="Message"
