fix:resolve undefined class error by adding return
Resolve undefined classes error for those classes that  don't have classes
defined in buttonElement.js by adding return in else condition.

--- a/views/about.html
+++ b/views/about.html
@@ -470,6 +470,7 @@
       </div>
       <p class="mt-12 text-center font-Jost sm:mt-20 md:mt-24 xl:mt-40  text-black-light mb-8 sm:text-xlp">Copyright © SELHONO</p>
     </footer>
-    <script src="/views/sliderSupport.js"></script>
+    <script type = "module" src = "/main.js"></script>
+
   </body>
 </html>
