fix:ensure all button elements are styled
Resolve a bug where only first element is styled due to using
querySelector by replacing querySelector to getElementsByClassName and
making classes of specific type button

Remove if - else condition as it is unnecessary .

--- a/views/about.html
+++ b/views/about.html
@@ -128,15 +128,8 @@
             preferences.
           </p>
 
-          <button
-            class="mx-auto mt-6 flex items-center rounded-2xl bg-black-dark px-8 py-4 font-Inter text-lg font-semibold text-white xl:ml-12 xl:mt-10 xl:px-10 xl:py-6"
-          >
+          <button class="button-black mx-auto mt-6 xl:ml-12 xl:mt-10">
             Our Concept
-            <img
-              src="../assets/images/icons/arrow.png"
-              alt="image"
-              class="grayscale-100 ml-3 brightness-0 invert filter"
-            />
           </button>
         </div>
       </div>
@@ -174,18 +167,13 @@
           </p>
 
           <button
-            class="relative z-10 mx-auto mt-6 flex items-center rounded-2xl bg-black-dark px-8 py-4 font-Inter text-lg font-semibold text-white xl:ml-12 xl:mt-10 xl:px-10 xl:py-6"
+            class=" button-black relative z-10 mx-auto mt-6 xl:ml-12 xl:mt-10 "
           >
             Our Portfolio
-            <img
-              src="../assets/images/icons/arrow.png"
-              alt="image"
-              class="grayscale-100 ml-3 brightness-0 invert filter"
-            />
           </button>
         </div>
       </div>
-    </section>
+    </section >
 
     <!--
   ***************************
@@ -194,7 +182,7 @@
 -->
 
     <section
-      class="mx-auto mt-60 grid w-screen place-content-center bg-orange-light pb-20 sm:mt-72 md:mt-96 xl:h-[679px] xl:w-[1210px] xl:rounded-[30px]"
+      class="mx-auto mt-60 grid w-screen place-content-center bg-orange-light pb-20 sm:mt-72 md:mt-96 xl:h-[679px] xl:w-[1210px] xl:rounded-[30px] "
     >
       <h1
         class="mt-6 text-center font-DM-serif-Display text-3xl text-white sm:text-3xlp md:mt-16 md:text-5xl xl:mt-[80px] xsm:text-2xl"
@@ -354,7 +342,7 @@
         <div
           class="sm:flex sm:gap-32 md:gap-52 xl:w-[1210px] xl:justify-between xl:gap-80"
         >
-          <div class="mt-4 border-b-2 sm:w-48 xl:pr-96 md:pr-60">
+          <div class="mt-4 border-b-2 sm:w-48 md:pr-60 xl:pr-96">
             <input
               class="border-none font-Jost text-xl text-black-light outline-none sm:text-2xl xl:text-3xl"
               placeholder="Name"
@@ -369,7 +357,9 @@
             />
           </div>
         </div>
-        <div class="mt-4 border-b-2 sm:w-[560px] xl:mt-40 xl:w-[1210px] md:w-[680px]">
+        <div
+          class="mt-4 border-b-2 sm:w-[560px] md:w-[680px] xl:mt-40 xl:w-[1210px]"
+        >
           <input
             class="border-none font-Jost text-xl text-black-light outline-none sm:text-2xl xl:text-3xl"
             placeholder="Message"
@@ -394,27 +384,31 @@
   ***************************
 -->
     <footer class="mt-12 md:mt-20 xl:mt-60">
-      <div class="gap-24 xl:flex xl:mx-auto xl:w-[1210px] ">
-        <div class=" xl:ml-0 sm:w-[560px] mx-auto md:w-[680px] w-[300px]">
-          <div class="flex gap-1 ">
+      <div class="gap-24 xl:mx-auto xl:flex xl:w-[1210px]">
+        <div class="mx-auto w-[300px] sm:w-[560px] md:w-[680px] xl:ml-0">
+          <div class="flex gap-1">
             <img
               src="/assets/images/logos/Vector.png"
               alt="logo"
-              class="size-6 sm:size-8 md:size-12 xl:size-10 "
+              class="size-6 sm:size-8 md:size-12 xl:size-10"
             />
-            <h1 class="font-DM-serif-Display text-xlp text-black-light sm:text-2xlp md:text-4xl md:mt-3 xl:text-[40px] xl:mt-0 ml-2">
+            <h1
+              class="ml-2 font-DM-serif-Display text-xlp text-black-light sm:text-2xlp md:mt-3 md:text-4xl xl:mt-0 xl:text-[40px]"
+            >
               SELHONO
             </h1>
           </div>
           <p
-            class="mt-2 w-[300px] sm:w-[560px] text-wrap text-left font-Jost text-xl text-black-light md:text-2xl md:w-[620px] md:mt-6 xl:w-[400px]"
+            class="mt-2 w-[300px] text-wrap text-left font-Jost text-xl text-black-light sm:w-[560px] md:mt-6 md:w-[620px] md:text-2xl xl:w-[400px]"
           >
-            Join our vibrant community of interior design enthusiasts! <br class=""> Follow us
-            on Facebook, Instagram, LinkedIn, and Twitter for daily inspiration
+            Join our vibrant community of interior design enthusiasts!
+            <br class="" />
+            Follow us on Facebook, Instagram, LinkedIn, and Twitter for daily
+            inspiration
           </p>
 
           <div class="flex gap-4 sm:mt-4">
-            <div class="text-2xlp  text-black-dark sm:text-4xl">
+            <div class="text-2xlp text-black-dark sm:text-4xl">
               <i class="fa-brands fa-square-facebook"></i>
             </div>
             <div class="text-2xlp text-black-dark sm:text-4xl">
@@ -449,28 +443,35 @@
           <p class="text-xlp leading-[4rem] text-black-light">Bedroom</p>
         </div>
 
-        <div class=" mt-10   md:w-[680px] xl:m-0 sm:w-[560px] mx-auto w-[300px] ">
-          <h1 class="font-DM-serif-Display text-2xl text-black-dark md:text-3xl xl:text-2xl">
+        <div class="mx-auto mt-10 w-[300px] sm:w-[560px] md:w-[680px] xl:m-0">
+          <h1
+            class="font-DM-serif-Display text-2xl text-black-dark md:text-3xl xl:text-2xl"
+          >
             Contact
           </h1>
           <p
-            class="mt-[1rem] whitespace-normal text-xl text-black-light sm:text-xlp md:text-2xl xl:leading-8 xl:text-xlp"
+            class="mt-[1rem] whitespace-normal text-xl text-black-light sm:text-xlp md:text-2xl xl:text-xlp xl:leading-8"
           >
             55 East Birchwood Ave. <br class="sm:hidden" />
             Brooklyn, New York 11201
           </p>
 
-          <p class="text-xl text-black-light xl:text-xlp xl:leading-[4rem] md:text-2xl">
+          <p
+            class="text-xl text-black-light md:text-2xl xl:text-xlp xl:leading-[4rem]"
+          >
             contact@selhono.com
           </p>
-          <p class="text-xl sm:text-xlp leading-[4rem] text-black-light">
+          <p class="text-xl leading-[4rem] text-black-light sm:text-xlp">
             (123) 456 - 7890
           </p>
         </div>
       </div>
-      <p class="mt-12 text-center font-Jost sm:mt-20 md:mt-24 xl:mt-40  text-black-light mb-8 sm:text-xlp">Copyright © SELHONO</p>
+      <p
+        class="mb-8 mt-12 text-center font-Jost text-black-light sm:mt-20 sm:text-xlp md:mt-24 xl:mt-40"
+      >
+        Copyright © SELHONO
+      </p>
     </footer>
-    <script type = "module" src = "/main.js"></script>
-
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
