refractor:replace tailwind styles with js components
Replace tailwind utilities with .button-black for bg-black
and .button-orange for bg-orange , so as to use  buttonElement.js
methods for styling.

--- a/views/about.html
+++ b/views/about.html
@@ -368,7 +368,7 @@
         </div>
       </div>
       <button
-        class="mx-auto mt-10 flex items-center rounded-2xl bg-black-dark px-8 py-4 font-Inter text-lg font-semibold text-white xl:px-10 xl:py-6"
+        class="button-black mx-auto mt-10 "
       >
         Send Now
         <img
