fix:resolve styling issue in buttonElement.js
To Resolve button styling issue in buttonElement.js
- create  class "btn" in style.css
- utilize "btn" in buttonElement.js
- hard-code color for createButton() in main.js

Utilize buttonElement.js for index and about page

--- a/style.css
+++ b/style.css
@@ -23,3 +23,19 @@ html {
 .slider-list::-webkit-scrollbar {
   display: none;
 }
+@layer components {
+  .btn {
+  @apply   flex
+  items-center
+  justify-center
+  rounded-2xl
+  px-8
+  py-4
+  font-Inter
+  text-lg
+  font-semibold
+  text-white
+  xl:px-10
+  xl:py-6
+}
+}
