--- a/views/about.html
+++ b/views/about.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../style.css" />
     <title>About us</title>
   </head>
+
   <body>
     <header class="mt-5 flex h-[50px] justify-between sm:mt-4 xsm:mt-2">
       <div class="ml-3 flex items-center gap-1">
@@ -128,7 +129,7 @@
             preferences.
           </p>
 
-          <button class="button-black mx-auto mt-6 xl:ml-12 xl:mt-10">
+          <button class=" button-black mx-auto mt-6 xl:ml-12 xl:mt-10">
             Our Concept
           </button>
         </div>
@@ -167,13 +168,13 @@
           </p>
 
           <button
-            class=" button-black relative z-10 mx-auto mt-6 xl:ml-12 xl:mt-10 "
+            class="button-black relative z-10 mx-auto mt-6 xl:ml-12 xl:mt-10"
           >
             Our Portfolio
           </button>
         </div>
       </div>
-    </section >
+    </section>
 
     <!--
   ***************************
@@ -182,7 +183,7 @@
 -->
 
     <section
-      class="mx-auto mt-60 grid w-screen place-content-center bg-orange-light pb-20 sm:mt-72 md:mt-96 xl:h-[679px] xl:w-[1210px] xl:rounded-[30px] "
+      class="mx-auto mt-60 grid w-screen place-content-center bg-orange-light pb-20 sm:mt-72 md:mt-96 xl:h-[679px] xl:w-[1210px] xl:rounded-[30px]"
     >
       <h1
         class="mt-6 text-center font-DM-serif-Display text-3xl text-white sm:text-3xlp md:mt-16 md:text-5xl xl:mt-[80px] xsm:text-2xl"
@@ -367,9 +368,7 @@
           />
         </div>
       </div>
-      <button
-        class="button-black mx-auto mt-10 "
-      >
+      <button class="button-black mx-auto mt-10">
         Send Now
         <img
           src="../assets/images/icons/arrow.png"
@@ -472,6 +471,7 @@
         Copyright © SELHONO
       </p>
     </footer>
-    <script type="module" src="/main.js"></script>
+
+     <script type="module" src="/main.js" ></script>
   </body>
 </html>
