fix: resolve the classes not adding by js
Resolve dynamically generated classes by js and mjs not adding as
tailwind classes by adding components/*.mjs and main.js to content
of tailwind config.

Remember not to forget to add files that dependent on tailwind to
include in tailwind config file.

--- a/style.css
+++ b/style.css
@@ -42,5 +42,8 @@ html {
 .margin-section {
  @apply mt-20 sm:mt-28  md:mt-32 xl:mt-40;
 }
+.font-style {
+  @apply text-3xl sm:text-3xlp md:text-5xl xl:text-6xl xsm:text-2xl;
+}
 
 }
