feat: create banner component
create banner component , utilize in newly created service page and
about html.

--- a/views/about.html
+++ b/views/about.html
@@ -12,23 +12,13 @@
 
     <!--
   ***************************
-  *        Testimonials      *
+  *      Banner About us    *
   ***************************
 -->
-    <section class="mt-6 sm:mt-10 md:mt-12 xl:mt-16">
-      <div
-        class="relative h-36 w-screen bg-About-Us-img bg-center sm:h-44 md:h-56 xl:h-64 2xl:h-[356px]"
-      >
-        <div
-          class="absolute inset-0 h-full w-full bg-black-default bg-opacity-60 pt-16 sm:pt-20 md:pt-28 xl:pt-36 2xl:pt-44"
-        >
-          <h1
-            class="text-center font-DM-serif-Display text-3xlp text-white sm:text-6xl md:text-6xlp xl:text-7xl"
-          >
-            About Us
-          </h1>
-        </div>
-      </div>
+    <div class="banner">
+     About us
+    </div>
+
       <!-- Quote -->
       <div
         class="md:[520px] mx-auto mt-6 flex w-[320px] sm:mt-10 sm:w-[484px] md:mt-12 xl:mt-16"
@@ -47,7 +37,7 @@
         </div>
         <div class="mx-2 h-24 border-l border-black-light sm:mx-2"></div>
       </div>
-    </section>
+   
 
     <!--
   ***************************
