feat:change banner image based on page
Add the functionlity in banner component i.e. banner.mjs to change the image according
to the current page location.

--- a/views/service.html
+++ b/views/service.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>services</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
     <header></header>
-    
+    <section class="banner">Services</section>
     
     <footer></footer>
     <script type="module" src="/main.js"></script>
