--- a/views/service.html
+++ b/views/service.html
@@ -1,17 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>services</title>
-    <link rel="stylesheet" href="/style.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="/style.css" />
+  </head>
+  <body>
     <header></header>
     <section class="banner">Services</section>
-    
+    <section
+      class="margin-section mx-auto flex max-w-[1210px] flex-col gap-14 sm:gap-16 md:mx-2 md:gap-24 lg:ml-12 lg:w-11/12 lg:flex-row lg:justify-center lg:gap-2 xl:w-[1210px] xsm:w-screen xsm:gap-14"
+    >
+      <!-- 1 -->
+      <div
+        class="mx-auto flex w-10/12 flex-col items-center justify-center gap-3 sm:mx-auto sm:w-9/12 md:w-8/12 md:gap-4 lg:w-[280px] xl:w-[360px] xsm:w-11/12"
+      >
+        <h1 class="font-DM-serif-Display text-2xl">Project Plan</h1>
+        <p
+          class="mx-auto flex flex-wrap justify-center text-center text-lg text-black-light sm:text-xlp lg:text-lg xl:text-xlp"
+        >
+          Our interior design company offers bespoke solutions tailored to
+          elevate every environment..
+        </p>
+
+        <button
+          class="flex items-center font-Jost text-lg font-semibold text-black-light lg:mt-14"
+        >
+          Read More
+          <img
+            src="/assets/images/icons/arrow.png"
+            alt="image"
+            class="ml-3 sm:size-5 xsm:size-4"
+          />
+        </button>
+      </div>
+      <!-- 2 -->
+      <div
+        class="mx-auto flex w-10/12 flex-col items-center justify-center gap-3 sm:mx-auto sm:w-9/12 md:w-8/12 lg:w-[280px] xl:w-[360px] xsm:w-11/12"
+      >
+        <h1 class="font-DM-serif-Display text-2xl">Interior Work</h1>
+        <p
+          class="mx-auto flex flex-wrap justify-center text-center text-lg text-black-light sm:text-xlp lg:text-lg xl:text-xlp"
+        >
+          Elevating spaces with innovative design, reflects your unique style
+          and enhance functionality .
+        </p>
+
+        <button
+          class="flex items-center font-Jost font-semibold text-black-light md:mt-14"
+        >
+          Read More
+          <img
+            src="/assets/images/icons/arrow.png"
+            alt="image"
+            class="ml-3 sm:size-5 xsm:size-4"
+          />
+        </button>
+      </div>
+      <!-- 3 -->
+      <div
+        class="mx-auto flex w-10/12 flex-col items-center justify-center gap-3 sm:mx-auto sm:w-9/12 md:w-8/12 lg:w-[280px] xl:w-[360px] xsm:w-11/12"
+      >
+        <h1 class="font-DM-serif-Display text-2xl">Realization</h1>
+        <p
+          class="mx-auto flex flex-wrap justify-center text-center text-lg text-black-light sm:text-xlp lg:text-lg xl:text-xlp"
+        >
+          Crafting spaces that inspire and captivate, Realization brings your
+          interior dreams to life.
+        </p>
+
+        <button
+          class="flex items-center font-Jost font-semibold text-black-light md:mt-14"
+        >
+          Read More
+          <img
+            src="/assets/images/icons/arrow.png"
+            alt="image"
+            class="ml-3 sm:size-5 xsm:size-4"
+          />
+        </button>
+      </div>
+    </section>
+
+    <section
+      class="mx-auto mt-14 flex max-w-[1210px] flex-col gap-14 sm:gap-16 md:mx-2 md:gap-24 lg:ml-12 lg:mt-40 lg:w-11/12 lg:flex-row lg:justify-center lg:gap-2 xl:w-[1210px] xsm:w-screen xsm:gap-14"
+    >
+      <!-- 1 -->
+      <div
+        class="mx-auto flex w-10/12 flex-col items-center justify-center gap-3 sm:mx-auto sm:w-9/12 md:w-8/12 md:gap-4 lg:w-[280px] xl:w-[360px] xsm:w-11/12"
+      >
+        <h1 class="font-DM-serif-Display text-2xl">2d/3d Art Work</h1>
+        <p
+          class="mx-auto flex flex-wrap justify-center text-center text-lg text-black-light sm:text-xlp lg:text-lg xl:text-xlp"
+        >
+          Transform environment with exquisite 2D and 3D artworks, infusing
+          style into every corner
+        </p>
+
+        <button
+          class="flex items-center font-Jost text-lg font-semibold text-black-light lg:mt-14"
+        >
+          Read More
+          <img
+            src="/assets/images/icons/arrow.png"
+            alt="image"
+            class="ml-3 sm:size-5 xsm:size-4"
+          />
+        </button>
+      </div>
+      <!-- 2 -->
+      <div
+        class="mx-auto flex w-10/12 flex-col items-center justify-center gap-3 sm:mx-auto sm:w-9/12 md:w-8/12 lg:w-[280px] xl:w-[360px] xsm:w-11/12"
+      >
+        <h1 class="font-DM-serif-Display text-2xl">Retail Design</h1>
+        <p
+          class="mx-auto flex flex-wrap justify-center text-center text-lg text-black-light sm:text-xlp lg:text-lg xl:text-xlp"
+        >
+          "Explore curated spaces and bespoke designs tailored to elevate your
+          retail environment.
+        </p>
+
+        <button
+          class="flex items-center font-Jost font-semibold text-black-light md:mt-14"
+        >
+          Read More
+          <img
+            src="/assets/images/icons/arrow.png"
+            alt="image"
+            class="ml-3 sm:size-5 xsm:size-4"
+          />
+        </button>
+      </div>
+      <!-- 3 -->
+      <div
+        class="mx-auto flex w-10/12 flex-col items-center justify-center gap-3 sm:mx-auto sm:w-9/12 md:w-8/12 lg:w-[280px] xl:w-[360px] xsm:w-11/12"
+      >
+        <h1 class="font-DM-serif-Display text-2xl">Decoration Work</h1>
+        <p
+          class="mx-auto flex flex-wrap justify-center text-center text-lg text-black-light sm:text-xlp lg:text-lg xl:text-xlp"
+        >
+          "Crafting bespoke interiors, where every detail tells a story of
+          sophistication and refinement.
+        </p>
+
+        <button
+          class="flex items-center font-Jost font-semibold text-black-light md:mt-14"
+        >
+          Read More
+          <img
+            src="/assets/images/icons/arrow.png"
+            alt="image"
+            class="ml-3 sm:size-5 xsm:size-4"
+          />
+        </button>
+      </div>
+    </section>
+
+    <section class="margin-section mx-auto">
+      <h1
+        class="text-nowrap text-center font-DM-serif-Display text-3xl text-black-dark sm:text-3xlp md:text-5xl xl:text-6xl xsm:text-2xl"
+      >
+        How do we work
+      </h1>
+      <p
+        class="mx-3 mt-2 max-w-[740px] text-center font-Jost text-lg font-medium text-black-light sm:mx-auto sm:w-[600px] sm:text-xlp md:w-[640px] xl:text-2xlp"
+      >
+        Discover our collaborative approach to interior design, where creativity
+        meets functionality to bring your vision to life.
+      </p>
+
+      <!-- How do we Work examples -->
+<!-- 
+      <div
+        class="mx-1 mt-8 flex flex-col justify-center gap-4 overflow-hidden sm:mt-16 sm:flex-row sm:gap-4 md:gap-20 md:mt-20 lg:gap-24 lg:mt-44"
+      >
+       
+        <img
+          src="/assets/images/backgrounds/Rectangle 21.png"
+          class="hidden w-[250px] object-contain sm:block md:w-[300px] lg:w-[480px] xl:w-[625px] xl:h-[485px]"
+        />
+        <div
+          class="h-[120px] w-screen bg-orange-light bg-cover bg-center bg-no-repeat sm:hidden"
+          style="
+            background-image: url(/assets/images/backgrounds/Rectangle\ 21.png);
+          "
+        >
+          <div class="h-[120px] w-full bg-black-default bg-opacity-50">
+             <h1
+            class="relative left-2/3 font-DM-serif-Display text-[90px] text-orange-bright  "
+          >
+            01
+          </h1>
+          </div>
+        </div>
+
+        <div
+          class="mx-auto w-[320px] rounded-3xl bg-transparent p-4 sm:static sm:mx-0 xsm:w-[280px] xsm:pl-2"
+        >
+          <h1
+            class="relative left-3/4 font-DM-serif-Display text-[90px] text-orange-bright sm:text-5xl md:text-7xl lg:text-[90px] hidden sm:block"
+          >
+            01
+          </h1>
+          <div class="mt-2 sm:mt-4 lg:mt-24 xl:mt-[150px]">
+            <h1
+              class="font-DM-serif-Display text-2xlp text-black-dark md:text-4xl "
+            >
+              Concept & Details
+            </h1>
+            <p
+              class="font-Jost text-lg text-black-light sm:text-xl md:text-xlp"
+            >
+              our interior design website offers expert guidance and inspiration
+              for creating stylish and functional environments.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="mx-1 mt-8 flex flex-col justify-center gap-4 overflow-hidden sm:mt-16 sm:flex-row sm:gap-4 md:gap-20 md:mt-20 lg:gap-24 lg:mt-44"
+      >
+       
+        <img
+          src="/assets/images/backgrounds/Rectangle 21.png"
+          class="hidden w-[250px] object-contain sm:block md:w-[300px] lg:w-[480px] xl:w-[625px] xl:h-[485px]"
+        />
+        <div
+          class="h-[120px] w-screen bg-orange-light bg-cover bg-center bg-no-repeat sm:hidden"
+          style="
+            background-image: url(/assets/images/backgrounds/Rectangle\ 21.png);
+          "
+        >
+          <div class="h-[120px] w-full bg-black-default bg-opacity-50"></div>
+        </div>
+
+        <div
+          class="relative -top-40 mx-auto w-[320px] rounded-3xl bg-transparent p-4 sm:static sm:mx-0 xsm:w-[280px] xsm:pl-2"
+        >
+          <h1
+            class="relative left-3/4 font-DM-serif-Display text-[90px] text-orange-bright sm:text-5xl md:text-7xl lg:text-[90px]"
+          >
+            01
+          </h1>
+          <div class="mt-2 sm:mt-4 lg:mt-24 xl:mt-[150px]">
+            <h1
+              class="font-DM-serif-Display text-2xlp text-black-dark md:text-4xl"
+            >
+              Concept & Details
+            </h1>
+            <p
+              class="font-Jost text-lg text-black-light sm:text-xl md:text-xlp"
+            >
+              our interior design website offers expert guidance and inspiration
+              for creating stylish and functional environments.
+            </p>
+          </div>
+        </div>
+      </div> -->
+
+     <div class="work-examples"></div>
+
+
+    </section>
+
+    <section class="margin-section"></section>
+
     <footer></footer>
+    <script type="module" src="/components/workExamples.js"></script>
     <script type="module" src="/main.js"></script>
-</body>
+  </body>
 </html>
